@@ -1,5 +1,6 @@
 2010-11-06  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16116: Configuration module is hard to find the array key because it's not sorted
 	* Fixed bug #15587: Bug: htmlspecialchars called twice (Thanks to Mickel Ricky)
 	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)
 
